force-app/main/default/objects/Contact/fields/AvailableFrom__c.field-meta.xml
<CustomField>
    <fullName>AvailableFrom__c</fullName>
    <description>date, when actor is available for participating in a movie filming</description>
    <label>Available From</label>
    <type>Date</type>
</CustomField>