force-app/main/default/objects/Contact/fields/PricePerHour__c.field-meta.xml
<CustomField>
    <fullName>PricePerHour__c</fullName>
    <description>how much the actor wants to be hourly payed</description>
    <label>Price Per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>