force-app/main/default/objects/Contact/fields/RoleTypes__c.field-meta.xml
<CustomField>
    <fullName>RoleTypes__c</fullName>
    <label>Role Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RoleTypes</valueSetName>
    </valueSet>
</CustomField>