force-app/main/default/objects/Contact/recordTypes/Actor.recordType-meta.xml
<RecordType>
    <fullName>Actor</fullName>
    <active>true</active>
    <description>Only actor available in Role picklist</description>
    <label>Actor</label>
</RecordType>